added xrc import

--- a/emails/resetToken/html.pug
+++ b/emails/resetToken/html.pug
@@ -13,9 +13,9 @@ div(style='border:2px solid #dcdcdc;margin:8px;text-align: center;')
   font-weight: 100;\
   font-size: 15;')
   p
-    | #{name} invited you to join XRC Tracker
+    | Reset Token For XRC Tracker
   br
-  | Install XRC Tracker and accpet your friend request under friends
+  | Please enter the Code: #{code}
   p
   p
     a(href='https://itunes.apple.com/us/app/xrc-tracker/id1457013430')
